WraDashboard/css/style.css
body {
    background-color: #EEEEEE;
    color: #3E3E3E;
    box-sizing: border-box;
    overflow-x: hidden;
    font-family: Roboto, 'Segoe UI', Arial, 'Microsoft Jhenghei', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
    padding: 0;
}


/* DEMO =============*/

body.demo {
    overflow-y: hidden;
}

.demo {
    text-align: center;
}

.demo a {
    display: inline-block;
    padding: 0 .5em;
}

.demo a.active {
    color: red;
}

.demo-show {
    position: absolute;
    z-index: 1;
    opacity: 1;
}

.demo-hide {
    position: absolute;
    z-index: 0;
    opacity: 0;
}

.demo-aside {
    background: #1E549F url(../images/demo/demo-menu-open.png) 0 0 no-repeat;
}

.demo-header {
    height: 135px;
    background: #2E74CD url(../images/demo/demo-header-bg.png) 0 0 repeat-x;
}

.demo-header a {
    display: flex;
    width: 100%;
    padding: 0;
}

.demo-logo {
    width: 443px;
    height: 127px;
    background: url(../images/demo/demo-logo.png) 15px 0 no-repeat;
}

.demo-user-help {
    width: calc(100vw - 300px - 443px);
    height: 135px;
    background: url(../images/demo/demo-header-right.png) 100% 100% no-repeat;
}


/* 覆蓋 BOOTSTRAP =============*/

.offcanvas {
    background-color: #f7fafc;
}

.offcanvas-bottom {
    height: 80vh;
    /* padding-bottom: 1em; */
}

caption {
    caption-side: top;
}


/* PAGE LAYOUT----------------- */

.page {
    display: grid;
    height: 100vh;
    grid-template-rows: 135px auto 1fr;
    grid-template-columns: 300px 1fr;
    grid-template-areas: "aside header" "aside breadcrumb" "aside main";
    grid-gap: 0;
}

.page>header {
    grid-area: header;
    border-bottom: 1px solid #EFEFEF;
    background-color: #FFFFFF;
    /* box-shadow: 0 0 10px rgba(0, 0, 0, .1); */
}

.page>aside {
    grid-area: aside;
    background-color: #1E549F;
    color: #FFFFFF;
    overflow: auto;
    float: left;
    height: 100vh;
    /* width: 300px; */
}

.page .breadcrumb {
    grid-area: breadcrumb;
}

.page>main {
    grid-area: main;
    /* background-color: #567; */
    overflow-y: auto;
}


/* Header */

.sys-name {
    display: table-cell;
    padding: .5em .5em;
    vertical-align: middle;
    font-size: 18px;
    font-weight: bold;
    color: #2262C7;
}

.sys-name::before {
    content: "";
    display: inline-block;
    width: 1.5em;
    height: 1.5em;
    margin-right: .5em;
    vertical-align: middle;
    background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/ROC_Water_Resources_Agency_Seal.svg/200px-ROC_Water_Resources_Agency_Seal.svg.png) 50% 50% no-repeat;
    background-size: contain;
}

.news {
    /* margin: 8px 20px 0 8px; */
    padding: .5em;
    font-size: 13px;
    /* background: rgb(239, 239, 239); */
    background: linear-gradient(180deg, rgba(236, 254, 255, 1) 75%, rgba(239, 239, 239, 1) 100%);
    /* border: 1px dotted #CCC; */
    border-radius: 4px;
    box-sizing: border-box;
}

.news .date {
    color: #5470c6;
    text-align: right;
    white-space: nowrap;
}

.news .date::before {
    content: "\f0a1";
    font-family: "Font Awesome 6 Free";
    font-weight: 900;
}

.news .latest .date {
    color: red;
}

.news td {
    vertical-align: top;
}

.news a {
    color: #5470c6;
    text-decoration: underline;
}


/* ----------------- */

.wrap {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    /* justify-content: flex-start;
    align-items: stretch; */
    /* height: 700px; */
    /* margin-right: -13px; */
    box-sizing: border-box;
}

.flex {
    display: flex;
}

.col {
    margin-right: 8px;
    margin-bottom: 8px;
    padding-bottom: .5em;
    border-radius: 4px;
    box-sizing: border-box;
}

.dashboard {
    padding: 10px;
    font-size: 13px;
}

.dashboard>.col {
    padding-left: 30px;
    padding-right: 30px;
    background-color: #FFFFFF;
}

.col-1 {
    width: calc( 100% / 3 - 8px);
}

.col-2 {
    width: calc( 100% / 3 * 2 - 8px);
}

.col-3 {
    width: calc( 100% - 8px);
}

.dashboard {
    /* margin-left: 240px !important; */
    max-width: 1280px;
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
}

.dashboard .title {
    margin-bottom: 1em;
    margin-left: -30px;
    margin-right: -30px;
    padding: .75em 1em;
    /* background-color: #E5EEFD; */
    /* color: #5470C6; */
    color: #999999;
    font-size: 16px;
    border-bottom: 1px solid #eee;
}

.section-title {
    padding: 2px 0;
    text-align: left;
    font-size: 16px;
    font-weight: bold;
}

.section-organizer-stage {
    padding-bottom: 1.5em;
}

.section-company {
    /* height: 400px; */
}

.notice {
    display: flex;
    width: calc(100% - 8px);
    margin-bottom: 8px;
    background-color: #4e5164;
    color: #FFFFFF;
    /* border: 1px solid #FF6961; */
    border-radius: 4px;
    box-sizing: border-box;
    font-weight: bold;
    justify-content: center;
}

.notice>div {
    width: auto;
    padding: 16px 2em;
    text-align: center;
    cursor: pointer;
    transition: .5s all;
}

.notice>div:hover {
    background-color: rgba(0, 0, 0, .25);
}

.notice>div:not(:last-child) {
    /* border-right: 1px dotted rgba(255, 255, 255, .5); */
}

.todo {
    padding-left: 4em !important;
    padding-right: 4em !important;
    /* background-color: rgba(0, 0, 0, .15); */
    -webkit-animation: flash 3s linear infinite;
    animation: flash 3s linear infinite;
}

.todo span {
    -webkit-animation: jump 3s linear infinite;
    animation: jump 3s linear infinite;
}

.todo:hover {
    -webkit-animation-play-state: paused;
    animation-play-state: paused;
}

.todo:hover,
.notice>div:hover span {
    transform-origin: 50% 50%;
    -webkit-animation-play-state: paused;
    animation-play-state: paused;
}
/* ... */

